# mavlink-afl-harness

./: README.md  setup.sh
src/: CMakeLists.txt  parser_with_random_message.cpp
